--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-	background-color: #202020;
-	color: #f0f0f0;
-}
-
 * {
-	transition: all 0.25s
+  transition: all 0.25s;
 }
